--- a/route_visualization.ipynb
+++ b/route_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -277,8 +277,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "grid = np.array\n",
-    "    ([[4, 2, 3, 2, 3, 2, 4],\n",
+    "grid = np.array([[4, 2, 3, 2, 3, 2, 4],\n",
     "    [2, -1, 2, -1, 2, -1, 2],\n",
     "    [4, 1, 3, 1, 3, 1, 4],\n",
     "    [2, -1, 2, -1, 2, -1, 2],\n",
@@ -286,8 +285,7 @@
     "    [2, -1, 2, -1, 2, -1, 2],\n",
     "    [4, 1, 3, 1, 3, 1, 4],\n",
     "    [2, -1, 2, -1, 2, -1, 2],\n",
-    "    [4, 2, 3, 2, 3, 2, 4],\n",
-    "])\n",
+    "    [4, 2, 3, 2, 3, 2, 4]])\n",
     "\n",
     "colors = {\n",
     "    1: 'lightblue',\n",
@@ -333,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
