add SaveFile and foreach statement to resultsdata

--- a/Results/variance.ipynb
+++ b/Results/variance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +63,77 @@
     "            new_data.append(row)\n",
     "    \n",
     "    return new_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JH_LP_40_50_10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_YT_A_Data(_keyword, _variance_all_csv_data):\n",
+    "    _data_list = []\n",
+    "    \n",
+    "    for csv_file, csv_data in _variance_all_csv_data:\n",
+    "    \n",
+    "        _extract_YT_A_data = extract_YT_A_data(csv_data, _keyword)\n",
+    "        \n",
+    "        # Extract the number after the first occurrence of \"Truck\"\n",
+    "        match  = re.search(r\"Truck_(\\d+)\", csv_file)\n",
+    "        if match:\n",
+    "            truck_number = match.group(1)\n",
+    "            # prev 없을 때\n",
+    "            if truck_number == \"1\":\n",
+    "                truck_number = \"0\"\n",
+    "            # print(\"prev Truck Number:\", truck_number)\n",
+    "            # print(f\"Extracted data from {csv_file} where '{_keyword}' exists:\")\n",
+    "            for row in _extract_YT_A_data:\n",
+    "                print(row)\n",
+    "                new_row = row + [truck_number] \n",
+    "                _data_list.append(new_row)\n",
+    "            # print(\"=\" * 80)\n",
+    "            \n",
+    "        else:\n",
+    "            print(\"Truck number not found.\")\n",
+    "    \n",
+    "    return _data_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Truck-100', 'Route-100', '(175.0 0.0 155.5)', '(625.0 0.0 50.0)', '395.092', '61.388', '32.692']\n",
+      "['Truck-100', 'Route-100', '(175.0 0.0 155.5)', '(625.0 0.0 50.0)', '402.972', '66.388', '35.572']\n",
+      "['Truck-100', 'Route-100', '(175.0 0.0 155.5)', '(625.0 0.0 50.0)', '432.584', '95.928', '35.636']\n",
+      "['Truck-100', 'Route-100', '(175.0 0.0 155.5)', '(625.0 0.0 50.0)', '426.584', '90.26', '35.312']\n",
+      "['Truck-100', 'Route-100', '(175.0 0.0 155.5)', '(625.0 0.0 50.0)', '493.384', '156.884', '35.492']\n",
+      "['Truck-100', 'Route-100', '(175.0 0.0 155.5)', '(625.0 0.0 50.0)', '445.48', '109.092', '35.388']\n",
+      "['Truck-100', 'Route-100', '(175.0 0.0 155.5)', '(625.0 0.0 50.0)', '534.252', '198.256', '34.996']\n",
+      "['Truck-100', 'Route-100', '(175.0 0.0 155.5)', '(625.0 0.0 50.0)', '540.036', '198.184', '38.304']\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder_name = 'variance_LP_jh'\n",
+    "variance_all_csv_data = load_csv_files_in_folder(folder_name)\n",
+    "\n",
+    "# Printing the loaded CSV data for each file\n",
+    "keyword = \"Truck-100\"\n",
+    "\n",
+    "YT_A_LP_data_jh = create_YT_A_Data(keyword, variance_all_csv_data)"
    ]
   },
   {
