have to test for congestion of prev_LP_0_20_80

--- a/Results/congestion.ipynb
+++ b/Results/congestion.ipynb
@@ -459,10 +459,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import function as f\n",
+    "import pandas as pd\n",
+    "\n",
+    "folder_name = 'congestion/prev_LP_0_20_80/'\n",
+    "congestion_all_csv_data = f.load_csv_files_in_folder(folder_name)\n",
+    "\n",
+    "columns = ['Truck_num'] + congestion_all_csv_data[0][1][0]\n",
+    "\n",
+    "\n",
+    "data_list = []\n",
+    "\n",
+    "for file_name, file_data in congestion_all_csv_data:\n",
+    "    truck_num = file_name.split('_')[2]\n",
+    "    \n",
+    "    for row in file_data[1:]:\n",
+    "        # print(row)\n",
+    "        row[4:] = [float(value) for value in row[4:]]\n",
+    "        new_row = [truck_num] + row\n",
+    "        data_list.append(new_row)\n",
+    "\n",
+    "congestion_df = pd.DataFrame(data_list, columns=columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# groupby Truck_num and get max value of Total time\n",
+    "x_value = congestion_df['Truck_num'].unique()\n",
+    "y_value = congestion_df.groupby('Truck_num')['Total Time'].max().values\n",
+    "\n",
+    "\n",
+    "x_label = 'Truck num'\n",
+    "y_label = 'max Completion Time'\n",
+    "title = 'max Completion Time by Truck num'\n",
+    "f.draw_plot(x_value, y_value, x_label, y_label, )"
+   ]
   }
  ],
  "metadata": {
