to congestion of LP_0_20_80

--- a/Results/congestion.ipynb
+++ b/Results/congestion.ipynb
@@ -459,9 +459,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Truck_num</th>\n",
+       "      <th>Truck_id</th>\n",
+       "      <th>Route_id</th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Total Time</th>\n",
+       "      <th>PickupSta AT</th>\n",
+       "      <th>DropSta AT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Truck-3</td>\n",
+       "      <td>Route-3</td>\n",
+       "      <td>(425.0 0.0 155.5)</td>\n",
+       "      <td>(375.0 0.0 200.0)</td>\n",
+       "      <td>343.188</td>\n",
+       "      <td>7.656</td>\n",
+       "      <td>30.544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Truck-4</td>\n",
+       "      <td>Route-4</td>\n",
+       "      <td>(675.0 0.0 205.5)</td>\n",
+       "      <td>(375.0 0.0 100.0)</td>\n",
+       "      <td>347.320</td>\n",
+       "      <td>7.656</td>\n",
+       "      <td>34.688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Truck-8</td>\n",
+       "      <td>Route-8</td>\n",
+       "      <td>(675.0 0.0 5.5)</td>\n",
+       "      <td>(625.0 0.0 200.0)</td>\n",
+       "      <td>359.644</td>\n",
+       "      <td>7.656</td>\n",
+       "      <td>47.004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Truck-6</td>\n",
+       "      <td>Route-6</td>\n",
+       "      <td>(175.0 0.0 -5.5)</td>\n",
+       "      <td>(625.0 0.0 200.0)</td>\n",
+       "      <td>363.304</td>\n",
+       "      <td>17.516</td>\n",
+       "      <td>40.804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Truck-9</td>\n",
+       "      <td>Route-9</td>\n",
+       "      <td>(675.0 0.0 55.5)</td>\n",
+       "      <td>(125.0 0.0 200.0)</td>\n",
+       "      <td>367.644</td>\n",
+       "      <td>7.656</td>\n",
+       "      <td>54.996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>380</th>\n",
+       "      <td>60</td>\n",
+       "      <td>Truck-58</td>\n",
+       "      <td>Route-58</td>\n",
+       "      <td>(175.0 0.0 155.5)</td>\n",
+       "      <td>(125.0 0.0 50.0)</td>\n",
+       "      <td>535.632</td>\n",
+       "      <td>39.700</td>\n",
+       "      <td>123.932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>60</td>\n",
+       "      <td>Truck-55</td>\n",
+       "      <td>Route-55</td>\n",
+       "      <td>(175.0 0.0 5.5)</td>\n",
+       "      <td>(375.0 0.0 100.0)</td>\n",
+       "      <td>547.372</td>\n",
+       "      <td>54.464</td>\n",
+       "      <td>103.924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>382</th>\n",
+       "      <td>60</td>\n",
+       "      <td>Truck-42</td>\n",
+       "      <td>Route-42</td>\n",
+       "      <td>(675.0 0.0 55.5)</td>\n",
+       "      <td>(125.0 0.0 200.0)</td>\n",
+       "      <td>561.732</td>\n",
+       "      <td>41.044</td>\n",
+       "      <td>215.700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383</th>\n",
+       "      <td>60</td>\n",
+       "      <td>Truck-18</td>\n",
+       "      <td>Route-18</td>\n",
+       "      <td>(175.0 0.0 55.5)</td>\n",
+       "      <td>(375.0 0.0 200.0)</td>\n",
+       "      <td>570.548</td>\n",
+       "      <td>10.348</td>\n",
+       "      <td>255.224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>60</td>\n",
+       "      <td>Truck-37</td>\n",
+       "      <td>Route-37</td>\n",
+       "      <td>(175.0 0.0 155.5)</td>\n",
+       "      <td>(625.0 0.0 200.0)</td>\n",
+       "      <td>585.784</td>\n",
+       "      <td>10.436</td>\n",
+       "      <td>269.344</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>385 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Truck_num  Truck_id  Route_id             Origin        Destination  \\\n",
+       "0          10   Truck-3   Route-3  (425.0 0.0 155.5)  (375.0 0.0 200.0)   \n",
+       "1          10   Truck-4   Route-4  (675.0 0.0 205.5)  (375.0 0.0 100.0)   \n",
+       "2          10   Truck-8   Route-8    (675.0 0.0 5.5)  (625.0 0.0 200.0)   \n",
+       "3          10   Truck-6   Route-6   (175.0 0.0 -5.5)  (625.0 0.0 200.0)   \n",
+       "4          10   Truck-9   Route-9   (675.0 0.0 55.5)  (125.0 0.0 200.0)   \n",
+       "..        ...       ...       ...                ...                ...   \n",
+       "380        60  Truck-58  Route-58  (175.0 0.0 155.5)   (125.0 0.0 50.0)   \n",
+       "381        60  Truck-55  Route-55    (175.0 0.0 5.5)  (375.0 0.0 100.0)   \n",
+       "382        60  Truck-42  Route-42   (675.0 0.0 55.5)  (125.0 0.0 200.0)   \n",
+       "383        60  Truck-18  Route-18   (175.0 0.0 55.5)  (375.0 0.0 200.0)   \n",
+       "384        60  Truck-37  Route-37  (175.0 0.0 155.5)  (625.0 0.0 200.0)   \n",
+       "\n",
+       "     Total Time  PickupSta AT  DropSta AT  \n",
+       "0       343.188         7.656      30.544  \n",
+       "1       347.320         7.656      34.688  \n",
+       "2       359.644         7.656      47.004  \n",
+       "3       363.304        17.516      40.804  \n",
+       "4       367.644         7.656      54.996  \n",
+       "..          ...           ...         ...  \n",
+       "380     535.632        39.700     123.932  \n",
+       "381     547.372        54.464     103.924  \n",
+       "382     561.732        41.044     215.700  \n",
+       "383     570.548        10.348     255.224  \n",
+       "384     585.784        10.436     269.344  \n",
+       "\n",
+       "[385 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import function as f\n",
     "import pandas as pd\n",
@@ -483,24 +676,8 @@
     "        new_row = [truck_num] + row\n",
     "        data_list.append(new_row)\n",
     "\n",
-    "congestion_df = pd.DataFrame(data_list, columns=columns)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# groupby Truck_num and get max value of Total time\n",
-    "x_value = congestion_df['Truck_num'].unique()\n",
-    "y_value = congestion_df.groupby('Truck_num')['Total Time'].max().values\n",
-    "\n",
-    "\n",
-    "x_label = 'Truck num'\n",
-    "y_label = 'max Completion Time'\n",
-    "title = 'max Completion Time by Truck num'\n",
-    "f.draw_plot(x_value, y_value, x_label, y_label, )"
+    "congestion_df = pd.DataFrame(data_list, columns=columns)\n",
+    "congestion_df\n"
    ]
   }
  ],
