--- a/Results/variance.ipynb
+++ b/Results/variance.ipynb
@@ -1408,6 +1408,20 @@
     "\n",
     "f.draw_plot(x_value, y_value, title_name, x_label, y_label)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### now_LP_70_20_10 with Prev_LP_0_20_80 by jh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
