evaluate congestion and completion time part

--- a/Results/completion_time.ipynb
+++ b/Results/completion_time.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import functions as f\n",
+    "import function as f\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
