have to see congesiton ratio

--- a/Evaluation/results.ipynb
+++ b/Evaluation/results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -296,6 +296,318 @@
     "plt.ylabel('Average of congestion ratio ', fontsize = 9)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remove outliers by  Congestion_ratio !\n",
+      "[('prev_5_now_5',      Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                    5                5        0        0      100   \n",
+      "1                    5                5        0        0      100   \n",
+      "2                    5                5        0        0      100   \n",
+      "3                    5                5        0        0      100   \n",
+      "4                    5                5        0        0      100   \n",
+      "...                ...              ...      ...      ...      ...   \n",
+      "1050                 5                5       80       10       10   \n",
+      "1051                 5                5       80       10       10   \n",
+      "1052                 5                5       80       10       10   \n",
+      "1053                 5                5       80       10       10   \n",
+      "1054                 5                5       80       10       10   \n",
+      "\n",
+      "      repeat_num  Congestion_ratio  \n",
+      "0              1         -0.030833  \n",
+      "1              1         -0.036999  \n",
+      "2              1          0.064451  \n",
+      "3              1          0.073779  \n",
+      "4              1          0.102983  \n",
+      "...          ...               ...  \n",
+      "1050          12          0.030783  \n",
+      "1051          12         -0.011127  \n",
+      "1052          12          0.162838  \n",
+      "1053          12          0.142716  \n",
+      "1054          12          0.072015  \n",
+      "\n",
+      "[1055 rows x 7 columns]), ('prev_5_now_10',      Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                    5               10        0        0      100   \n",
+      "1                    5               10        0        0      100   \n",
+      "2                    5               10        0        0      100   \n",
+      "3                    5               10        0        0      100   \n",
+      "4                    5               10        0        0      100   \n",
+      "...                ...              ...      ...      ...      ...   \n",
+      "1594                 5               10       80       10       10   \n",
+      "1595                 5               10       80       10       10   \n",
+      "1596                 5               10       80       10       10   \n",
+      "1597                 5               10       80       10       10   \n",
+      "1598                 5               10       80       10       10   \n",
+      "\n",
+      "      repeat_num  Congestion_ratio  \n",
+      "0              1          0.028298  \n",
+      "1              1         -0.047244  \n",
+      "2              1          0.085210  \n",
+      "3              1          0.062669  \n",
+      "4              1          0.015667  \n",
+      "...          ...               ...  \n",
+      "1594          12          0.103474  \n",
+      "1595          12          0.021841  \n",
+      "1596          12          0.034648  \n",
+      "1597          12          0.168000  \n",
+      "1598          12          0.041834  \n",
+      "\n",
+      "[1599 rows x 7 columns]), ('prev_10_now_10',      Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                   10               10        0        0      100   \n",
+      "1                   10               10        0        0      100   \n",
+      "2                   10               10        0        0      100   \n",
+      "3                   10               10        0        0      100   \n",
+      "4                   10               10        0        0      100   \n",
+      "...                ...              ...      ...      ...      ...   \n",
+      "2126                10               10       80       10       10   \n",
+      "2127                10               10       80       10       10   \n",
+      "2128                10               10       80       10       10   \n",
+      "2129                10               10       80       10       10   \n",
+      "2130                10               10       80       10       10   \n",
+      "\n",
+      "      repeat_num  Congestion_ratio  \n",
+      "0              1         -0.014935  \n",
+      "1              1         -0.073194  \n",
+      "2              1          0.028169  \n",
+      "3              1         -0.081000  \n",
+      "4              1          0.129315  \n",
+      "...          ...               ...  \n",
+      "2126          12          0.008276  \n",
+      "2127          12         -0.024925  \n",
+      "2128          12          0.140425  \n",
+      "2129          12          0.030999  \n",
+      "2130          12          0.000845  \n",
+      "\n",
+      "[2131 rows x 7 columns]), ('prev_10_now_15',      Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                   10               15        0        0      100   \n",
+      "1                   10               15        0        0      100   \n",
+      "2                   10               15        0        0      100   \n",
+      "3                   10               15        0        0      100   \n",
+      "4                   10               15        0        0      100   \n",
+      "...                ...              ...      ...      ...      ...   \n",
+      "2659                10               15       80       10       10   \n",
+      "2660                10               15       80       10       10   \n",
+      "2661                10               15       80       10       10   \n",
+      "2662                10               15       80       10       10   \n",
+      "2663                10               15       80       10       10   \n",
+      "\n",
+      "      repeat_num  Congestion_ratio  \n",
+      "0              1         -0.004474  \n",
+      "1              1          0.118448  \n",
+      "2              1         -0.095463  \n",
+      "3              1         -0.052728  \n",
+      "4              1         -0.035740  \n",
+      "...          ...               ...  \n",
+      "2659          12          0.174507  \n",
+      "2660          12          0.106927  \n",
+      "2661          12          0.065083  \n",
+      "2662          12          0.086337  \n",
+      "2663          12          0.038053  \n",
+      "\n",
+      "[2664 rows x 7 columns]), ('prev_15_now_15',      Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                   15               15        0        0      100   \n",
+      "1                   15               15        0        0      100   \n",
+      "2                   15               15        0        0      100   \n",
+      "3                   15               15        0        0      100   \n",
+      "4                   15               15        0        0      100   \n",
+      "...                ...              ...      ...      ...      ...   \n",
+      "3116                15               15       80       10       10   \n",
+      "3117                15               15       80       10       10   \n",
+      "3118                15               15       80       10       10   \n",
+      "3119                15               15       80       10       10   \n",
+      "3120                15               15       80       10       10   \n",
+      "\n",
+      "      repeat_num  Congestion_ratio  \n",
+      "0              1         -0.023204  \n",
+      "1              1          0.053855  \n",
+      "2              1          0.107190  \n",
+      "3              1          0.034116  \n",
+      "4              1          0.138067  \n",
+      "...          ...               ...  \n",
+      "3116          12          0.088864  \n",
+      "3117          12          0.078667  \n",
+      "3118          12          0.188845  \n",
+      "3119          12          0.138146  \n",
+      "3120          12          0.169673  \n",
+      "\n",
+      "[3121 rows x 7 columns]), ('prev_15_now_20',      Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                   15               20        0        0      100   \n",
+      "1                   15               20        0        0      100   \n",
+      "2                   15               20        0        0      100   \n",
+      "3                   15               20        0        0      100   \n",
+      "4                   15               20        0        0      100   \n",
+      "...                ...              ...      ...      ...      ...   \n",
+      "3683                15               20       80       10       10   \n",
+      "3684                15               20       80       10       10   \n",
+      "3685                15               20       80       10       10   \n",
+      "3686                15               20       80       10       10   \n",
+      "3687                15               20       80       10       10   \n",
+      "\n",
+      "      repeat_num  Congestion_ratio  \n",
+      "0              1          0.031400  \n",
+      "1              1          0.056531  \n",
+      "2              1          0.187785  \n",
+      "3              1          0.042275  \n",
+      "4              1          0.039624  \n",
+      "...          ...               ...  \n",
+      "3683          12          0.239021  \n",
+      "3684          12          0.319548  \n",
+      "3685          12          0.082711  \n",
+      "3686          12          0.070105  \n",
+      "3687          12          0.167650  \n",
+      "\n",
+      "[3688 rows x 7 columns]), ('prev_20_now_20',      Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                   20               20        0        0      100   \n",
+      "1                   20               20        0        0      100   \n",
+      "2                   20               20        0        0      100   \n",
+      "3                   20               20        0        0      100   \n",
+      "4                   20               20        0        0      100   \n",
+      "...                ...              ...      ...      ...      ...   \n",
+      "8399                20               20       80       10       10   \n",
+      "8400                20               20       80       10       10   \n",
+      "8401                20               20       80       10       10   \n",
+      "8402                20               20       80       10       10   \n",
+      "8403                20               20       80       10       10   \n",
+      "\n",
+      "      repeat_num  Congestion_ratio  \n",
+      "0              1         -0.069026  \n",
+      "1              1         -0.060302  \n",
+      "2              1         -0.017843  \n",
+      "3              1         -0.012415  \n",
+      "4              1          0.058452  \n",
+      "...          ...               ...  \n",
+      "8399          12          0.149351  \n",
+      "8400          12          0.242814  \n",
+      "8401          12          0.086613  \n",
+      "8402          12          0.104746  \n",
+      "8403          12          0.249157  \n",
+      "\n",
+      "[8404 rows x 7 columns]), ('prev_20_now_25',      Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                   20               25        0        0      100   \n",
+      "1                   20               25        0        0      100   \n",
+      "2                   20               25        0        0      100   \n",
+      "3                   20               25        0        0      100   \n",
+      "4                   20               25        0        0      100   \n",
+      "...                ...              ...      ...      ...      ...   \n",
+      "9289                20               25       80       10       10   \n",
+      "9290                20               25       80       10       10   \n",
+      "9291                20               25       80       10       10   \n",
+      "9292                20               25       80       10       10   \n",
+      "9293                20               25       80       10       10   \n",
+      "\n",
+      "      repeat_num  Congestion_ratio  \n",
+      "0              1          0.059511  \n",
+      "1              1          0.148473  \n",
+      "2              1          0.245433  \n",
+      "3              1         -0.056129  \n",
+      "4              1          0.126701  \n",
+      "...          ...               ...  \n",
+      "9289          12          0.139487  \n",
+      "9290          12          0.231445  \n",
+      "9291          12          0.355649  \n",
+      "9292          12          0.147091  \n",
+      "9293          12          0.097117  \n",
+      "\n",
+      "[9294 rows x 7 columns]), ('prev_25_now_25',       Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                    25               25        0        0      100   \n",
+      "1                    25               25        0        0      100   \n",
+      "2                    25               25        0        0      100   \n",
+      "3                    25               25        0        0      100   \n",
+      "4                    25               25        0        0      100   \n",
+      "...                 ...              ...      ...      ...      ...   \n",
+      "10465                25               25       80       10       10   \n",
+      "10466                25               25       80       10       10   \n",
+      "10467                25               25       80       10       10   \n",
+      "10468                25               25       80       10       10   \n",
+      "10469                25               25       80       10       10   \n",
+      "\n",
+      "       repeat_num  Congestion_ratio  \n",
+      "0               1         -0.053904  \n",
+      "1               1         -0.053323  \n",
+      "2               1         -0.036225  \n",
+      "3               1          0.067234  \n",
+      "4               1          0.078293  \n",
+      "...           ...               ...  \n",
+      "10465          12          0.314737  \n",
+      "10466          12          0.596803  \n",
+      "10467          12          0.490439  \n",
+      "10468          12          0.309867  \n",
+      "10469          12          0.238503  \n",
+      "\n",
+      "[10470 rows x 7 columns]), ('prev_25_now_30',       Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                    25               30        0        0      100   \n",
+      "1                    25               30        0        0      100   \n",
+      "2                    25               30        0        0      100   \n",
+      "3                    25               30        0        0      100   \n",
+      "4                    25               30        0        0      100   \n",
+      "...                 ...              ...      ...      ...      ...   \n",
+      "11435                25               30       80       10       10   \n",
+      "11436                25               30       80       10       10   \n",
+      "11437                25               30       80       10       10   \n",
+      "11438                25               30       80       10       10   \n",
+      "11439                25               30       80       10       10   \n",
+      "\n",
+      "       repeat_num  Congestion_ratio  \n",
+      "0               1          0.038573  \n",
+      "1               1          0.160325  \n",
+      "2               1          0.199590  \n",
+      "3               1          0.264519  \n",
+      "4               1          0.020645  \n",
+      "...           ...               ...  \n",
+      "11435          12          0.353786  \n",
+      "11436          12          0.469630  \n",
+      "11437          12          0.315716  \n",
+      "11438          12          0.646940  \n",
+      "11439          12          0.400349  \n",
+      "\n",
+      "[11440 rows x 7 columns]), ('prev_30_now_30',       Prev Truck Number Now Truck Number  alpha_1  alpha_2  alpha_3  \\\n",
+      "0                    30               30        0        0      100   \n",
+      "1                    30               30        0        0      100   \n",
+      "2                    30               30        0        0      100   \n",
+      "3                    30               30        0        0      100   \n",
+      "4                    30               30        0        0      100   \n",
+      "...                 ...              ...      ...      ...      ...   \n",
+      "12433                30               30       80       10       10   \n",
+      "12434                30               30       80       10       10   \n",
+      "12435                30               30       80       10       10   \n",
+      "12436                30               30       80       10       10   \n",
+      "12437                30               30       80       10       10   \n",
+      "\n",
+      "       repeat_num  Congestion_ratio  \n",
+      "0               1         -0.015383  \n",
+      "1               1          0.143044  \n",
+      "2               1          0.311968  \n",
+      "3               1          0.472653  \n",
+      "4               1          0.186066  \n",
+      "...           ...               ...  \n",
+      "12433          12          0.468412  \n",
+      "12434          12          0.813625  \n",
+      "12435          12          0.599383  \n",
+      "12436          12          0.542175  \n",
+      "12437          12          0.863199  \n",
+      "\n",
+      "[12438 rows x 7 columns])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "title = 'Congestion ratio average of LP'\n",
+    "\n",
+    "x_col = ['Prev Truck Number', 'Now Truck Number']\n",
+    "y_col = ['Congestion_ratio']\n",
+    "y_lim = (0, 0.5)\n",
+    "\n",
+    "dfs = f.get_dfs_by_folder(folder_path, y_col, True, standard_outlier=y_col[0])\n",
+    "dfs = f.to_numeric(dfs, y_col[0])\n",
+    "print(dfs)"
    ]
   },
   {
